<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:columnCount="2"
    android:orientation="vertical"
    android:padding="4dp"
    app:layout_gravity="fill"
    tools:context=".MainActivity">

    <!--TextView-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/widget_message" />
    <!--Button-->
    <Button
        android:id="@id/button"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"

        android:layout_gravity="fill_horizontal"
        android:text="@string/ButtonText" />
    <!--Image-->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/flag" />

    <!--Checkbox-->
    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="fill"

        android:text="@string/checkBox" />
    <!--Switch-->
    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="center"
        android:text="@string/switchON" />

    <!--EditText-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        />
</GridLayout>